--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         </p>
       </div>
       <div class="contactForm">
-        <form method="POST" action="">
+        <form name="contact" method="POST" data-netlify="true">
           <div>
             <p><b class="asterisk">*</b>Nome completo:</p>
           </div>
